--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>KoralCity Properties</title>
+    <title>Ravio Properties</title>
 	<!-- Metas -->
     <meta charset="UTF-8">
     <meta name="description" content="">
